<resources>
    <string name="app_name">PaprTrdr</string>
    <!-- Strings related to login screens -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_motto">Sign in to continue paper trading.</string>
    <string name="slogan">Trade without the risk.</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="already_member">Already have an account? <b>Sign in</b></string>
    <string name="button_send">Send</string>
    <string name="password_requirements">Your password must be 8 or more characters long &amp; contain a mix of upper &amp; lower case letters, numbers, &amp; symbols.</string>
    <string name="register_motto">Create new account</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Start paper trading.</string>
    <string name="go_to_sign_in">Go to sign in</string>

    <string name="forgot_password">Password Reset.</string>
    <string name="forgot_password_prompt">Please enter your email to reset your password.</string>
    <string name="forgot_password_reset_sent">A password reset email has been sent to </string>
    <string name="forgot_password_reset_button">reset</string>

    <string name="verification_sent_main">Verification email sent.</string>
    <string name="verification_sent_body">Please check your inbox and follow the link to confirm your email. When that is done, login.</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>
    <string name="text_logout">Log Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="preference_auth_key">authKey</string>
    <string name="preference_user_name">userName</string>
    <string name="current_holdings">Current Stocks Owned:</string>
    <string name="no_stocks_owned">You currently have no holdings.</string>
    <string name="buy_some_stocks">Try buying some at in the market tab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stock_buy">BUY</string>
    <string name="stock_sell">SELL</string>

    <!-- Strings for stock stat names  -->
    <string name="_52w_high">52w High</string>
    <string name="_52w_low">52w Low</string>
    <string name="_ask">Ask</string>
    <string name="_avg_volume">Avg. Vol</string>
    <string name="_bid">Bid</string>
    <string name="_country">Country</string>
    <string name="_currency">Currency</string>
    <string name="_div_yield">Div. Yield</string>
    <string name="_exchange">Exchange</string>
    <string name="_high">Day High</string>
    <string name="_low">Day Low</string>
    <string name="_mkt_cap">Market Cap</string>
    <string name="_industry">Industry</string>
    <string name="_open">Open</string>
    <string name="_price_earnings">P/E</string>
    <string name="_recommendationKey">Tip</string>
    <string name="_sector">Sector</string>
    <string name="_volume">Volume</string>

    <string name="past_transactions">Past Transactions</string>



</resources>
