<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryActivity">

    <ImageView
        android:id="@+id/image_logo_with_name"
        android:layout_width="388dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:scaleX="4.2"
        android:scaleY="4.2"
        android:translationX="70dp"
        android:translationY="-85dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/graph_foreground" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="125dp"
        android:layout_height="54dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:fontFamily="@font/gotham_rounded_bold"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/darkBlue"
        app:strokeWidth="1dp"
        tools:text="@string/action_sign_in_short" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="125dp"
        android:layout_height="54dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:fontFamily="@font/gotham_rounded_bold"
        android:text="@string/action_register_short"
        android:textColor="@color/lightBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/lightBlue"
        app:strokeWidth="1dp"
        tools:text="@string/action_register_short" />

    <TextView
        android:id="@+id/text_slogan"
        android:layout_width="169dp"
        android:layout_height="119dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/gotham_rounded_book"
        android:text="@string/slogan"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_signin"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/gotham_rounded_bold"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/lightBlue"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/text_slogan"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
