<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgotPasswordActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_logo_register"
        android:layout_width="165dp"
        android:layout_height="125dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:innerRadius="0dp"
        android:shape="rectangle"
        app:cardBackgroundColor="@color/darkBlue"
        app:cardCornerRadius="50dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/darkBlue"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/logo_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:srcCompat="@mipmap/logo_light_foreground" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_forgotpassword_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="Simple back button on login screen"
        android:elevation="10dp"
        android:enabled="true"
        android:hapticFeedbackEnabled="true"
        android:scrollX="-5dp"
        app:backgroundTint="@color/lightBlue"
        app:borderWidth="1dp"
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        app:tint='@color/lightBlue' />


    <TextView
        android:id="@+id/textView"
        android:layout_width="233dp"
        android:layout_height="166dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gotham_rounded_bold"
        android:lineSpacingExtra="70sp"
        android:text="@string/text_forgot_password_title"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_logo_register" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="315dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gotham_rounded_book"
        android:text="@string/text_forgot_password_message"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/textentry_forgotpassword_email"
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/prompt_email"
        android:backgroundTint="@color/darkBlue"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="39dp"
        android:layout_marginEnd="4dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/textentry_forgotpassword_email"
        app:layout_constraintEnd_toStartOf="@+id/textentry_forgotpassword_email"
        app:layout_constraintTop_toTopOf="@+id/textentry_forgotpassword_email"
        app:srcCompat="@drawable/ic_person"
        app:tint="@color/lightBlue" />

    <Button
        android:id="@+id/button_forgotpassword_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:fontFamily="@font/gotham_rounded_bold"
        android:text="@string/forgot_password_reset_button"
        android:textColor="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textentry_forgotpassword_email"
        app:layout_constraintVertical_bias="0.459"
        app:strokeColor="@color/darkBlue"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
