<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C0C0C"
    android:backgroundTint="#FFFFFF"
    android:foregroundTint="#F11717"
    android:foregroundTintMode="screen"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">


    <EditText
        android:id="@+id/textentry_signin_email"
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/prompt_email"
        android:backgroundTint="@color/darkBlue"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <EditText
        android:id="@+id/textentry_signin_password"
        android:layout_width="267dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/prompt_password"
        android:backgroundTint="@color/darkBlue"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textentry_signin_email" />

    <Button
        android:id="@+id/button_signin_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="10dp"
        android:fontFamily="@font/gotham_rounded_bold"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textentry_signin_password"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/darkBlue"
        app:strokeWidth="1dp" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textentry_signin_password"
        app:layout_constraintStart_toStartOf="@+id/textentry_signin_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_signin_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="Simple back button on login screen"
        android:elevation="10dp"
        android:enabled="true"
        android:hapticFeedbackEnabled="true"
        android:scrollX="-5dp"
        app:backgroundTint="@color/lightBlue"
        app:borderWidth="1dp"
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        app:tint='@color/lightBlue' />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gotham_rounded_bold"
        android:text="@string/welcome_back"
        android:textColor="@color/darkBlue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_logo_register" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="315dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gotham_rounded_book"
        android:text="@string/login_motto"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_logo_register"
        android:layout_width="165dp"
        android:layout_height="125dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:innerRadius="0dp"
        android:shape="rectangle"
        app:cardBackgroundColor="@color/darkBlue"
        app:cardCornerRadius="50dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/darkBlue"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/logo_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:srcCompat="@mipmap/logo_light_foreground" />
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="39dp"
        android:layout_marginEnd="4dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/textentry_signin_email"
        app:layout_constraintEnd_toStartOf="@+id/textentry_signin_email"
        app:layout_constraintTop_toTopOf="@+id/textentry_signin_email"
        app:srcCompat="@drawable/ic_person"
        app:tint="@color/lightBlue" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="32dp"
        android:layout_height="39dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/textentry_signin_password"
        app:layout_constraintEnd_toStartOf="@+id/textentry_signin_password"
        app:layout_constraintTop_toTopOf="@+id/textentry_signin_password"
        app:srcCompat="@drawable/ic_lock"
        app:tint="@color/lightBlue" />

    <Button
        android:id="@+id/button_signin_forgot_password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/gotham_rounded_book_italic"
        android:text="@string/text_forgot_password"
        android:textColor="@color/darkBlue"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Signin_FacebookAuth" />

    <ImageView
        android:id="@+id/imageView_login_viewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:clickable="true"
        android:tintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="@+id/textentry_signin_password"
        app:layout_constraintStart_toEndOf="@+id/textentry_signin_password"
        app:layout_constraintTop_toTopOf="@+id/textentry_signin_password"
        app:srcCompat="@android:drawable/ic_menu_view"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/imageView_Signin_FacebookAuth"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/button_signin_signin"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_signin_signin"
        app:srcCompat="@drawable/ic_facebook" />

    <ImageView
        android:id="@+id/imageView_Signin_GoogleAuth"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="@+id/button_signin_signin"
        app:layout_constraintTop_toTopOf="@+id/imageView_Signin_FacebookAuth"
        app:srcCompat="@drawable/googleg_standard_color_18" />


</androidx.constraintlayout.widget.ConstraintLayout>
